# Sylphos

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Cargo.toml.additions  LICENSE  README.md  files.txt
crates/app/: Cargo.toml  Cargo.toml.additions  build.rs
crates/app/src/: compat_cli.rs  devtools_trace.rs  main.rs  main.rs.additions  shader.wgsl  state.rs
crates/app/src/benchmark/: mod.rs
crates/app/src/browser/: accessibility.rs  cache.rs  chrome.rs  cssom_bridge.rs  dom.rs  forms.rs  history.rs  http.rs  images.rs  mod.rs  navigation.rs  resources.rs  security.rs  stylesheets.rs  tabs.rs
crates/app/src/js/: console.rs  cookies.rs  cssom.rs  dom_bindings.rs  event_loop.rs  history_api.rs  media.rs  mod.rs  mod.rs.additions  runtime.rs  scripts.rs  security_policy.rs  service_worker.rs  site_compat_bridge.rs  storage.rs  syljs_benchmark_bridge.rs  syljs_bridge.rs  syljs_canvas_worker_bridge.rs  syljs_cssom_bridge.rs  syljs_dom_bridge.rs  syljs_event_loop_bridge.rs  syljs_invalidation_bridge.rs  syljs_isolated_worker_bridge.rs  syljs_media_bridge.rs  syljs_script_pipeline_bridge.rs  syljs_vm_bridge.rs  syljs_webapi_bridge.rs  syljs_worker_transfer_bridge.rs  web_platform.rs
crates/app/src/pipeline/: mod.rs  mod.rs.additions  script_pipeline.rs
crates/app/src/present_adapter/: flex_grid_dom_adapter.rs  mod.rs  mod.rs.additions  text_style_adapter.rs
crates/app/src/render/: flex_grid_layout_bridge.rs  font_atlas.rs  image_atlas.rs  mesh.rs  mod.rs  mod.rs.additions  shared.rs  style_layout_invalidation_bridge.rs  svg_icon_bridge.rs  text.rs  text_measure_bridge.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: lib.rs
crates/html_mvp/: Cargo.toml
crates/html_mvp/proptest-regressions/: lib.txt
crates/html_mvp/src/: .serializer.rs.pending-snap  dom.rs  html5_lite_tests.rs  lib.rs  normalizer.rs  parser.rs  serializer.rs  tokenizer.rs
crates/present/: Cargo.toml  Cargo.toml.additions
crates/present/src/: accessibility.rs  accessibility_tests.rs  box_model.rs  color.rs  css_lite.rs  cssom.rs  devtools.rs  document.rs  dynamic_style.rs  events.rs  extract.rs  flex_grid.rs  flex_grid_tests.rs  forms.rs  hit.rs  inline.rs  invalidation.rs  layout.rs  lib.rs  lib.rs.additions  mutation.rs  mutation_tests.rs  paint.rs  reflow.rs  reflow_tests.rs  selector.rs  style.rs  styled.rs  stylesheet.rs  svg.rs  svg_tests.rs  tests.rs  text.rs  text_tests.rs
crates/syljs/: Cargo.toml
crates/syljs/src/: ast.rs  benchmark.rs  benchmark_tests.rs  bytecode.rs  cache_api.rs  cache_api_tests.rs  canvas.rs  canvas_worker_tests.rs  compiler.rs  cssom.rs  diagnostic.rs  dom.rs  event_loop.rs  http.rs  http_tests.rs  invalidation.rs  invalidation_tests.rs  lexer.rs  lib.rs  lib.rs.additions  media.rs  media_tests.rs  parser.rs  promise.rs  script_pipeline.rs  script_pipeline_tests.rs  security.rs  security_tests.rs  site_compat.rs  site_compat_tests.rs  span.rs  tests.rs  token.rs  transfer.rs  transfer_tests.rs  value.rs  visit.rs  vm.rs  webapi.rs  worker.rs  (+3 more)
crates/util/: Cargo.toml
crates/util/src/: lib.rs  theme.rs
scripts/: dev.ps1  dev.sh
