[package]
name = "sylphos"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sylphos native Fetch → Parse → Present application"
rust-version = "1.74"

[[bin]]
name = "sylphos"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

util = { path = "../util" }
fetch = { path = "../fetch" }
html_mvp = { path = "../html_mvp" }
present = { path = "../present" }
syljs = { path = "../syljs" }

[build-dependencies]
winresource = "0.1"
