[package]
name = "util"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Workspace utility crate: error prelude and tracing/logging bootstrap."
readme = false
rust-version = "1.74"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
guarded-unsafe = []

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
